# larreco

./: CMakeLists.txt  altCMakeLists.cmake
ClusterFinder/: CMakeLists.txt  altCMakeLists.cmake
ClusterFinder/RStarTree/: CMakeLists.txt  altCMakeLists.cmake
EventFinder/: CMakeLists.txt  altCMakeLists.cmake
Genfit/: CMakeLists.txt  altCMakeLists.cmake
HitFinder/: CMakeLists.txt  GausHitFinder_module.cc  altCMakeLists.cmake
MCComp/: CMakeLists.txt
Modules/: larrecoConfig.cmake.in
RecoAlg/: CCHitFinderAlg.cxx  CCHitFinderAlg.h  CMakeLists.txt  ClusterCrawlerAlg.cxx  CornerFinderAlg.cxx  CornerFinderAlg.h  CosmicTrackerAlg.cxx  CosmicTrackerAlg.h  DBScanAlg.cxx  DBScanAlg.h  ProjectionMatchingAlg.cxx  altCMakeLists.cmake  clusteralgorithms.fcl  corneralgorithms.fcl  hitalgorithms.fcl
RecoAlg/Cluster3DAlgs/: CMakeLists.txt  altCMakeLists.cmake
RecoAlg/ClusterRecoUtil/: CMakeLists.txt  ClusterParams.cxx  ClusterParams.h  ClusterParamsAlgLarlite.cxx  ClusterParamsAlgLarlite.h  ParamsAlgBase.h  Polygon2D.cxx  altCMakeLists.cmake
RecoAlg/PMAlg/: PmaNode3D.cxx
ShowerFinder/: CMakeLists.txt  altCMakeLists.cmake
ShowerFinder/ShowerReco3D/: CMakeLists.txt
SpacePointFinder/: CMakeLists.txt  altCMakeLists.cmake
TrackFinder/: CMakeLists.txt  CosmicTracker_module.cc  PMAlgTrackMaker_module.cc  altCMakeLists.cmake
VertexFinder/: CMakeLists.txt  CornerFinder_module.cc  altCMakeLists.cmake  vertexfindermodules.fcl
cmakeConfig/: larreco-fragment.cmake.in
larreco/: CMakeLists.txt
larreco/Calibrator/: CMakeLists.txt
larreco/Calorimetry/: CMakeLists.txt  CalorimetryAlg.cxx  CalorimetryAlg.h  Calorimetry_module.cc  LinearEnergyAlg.cxx  TrackCalorimetryAlg.cxx  calorimetry.fcl
larreco/ClusterFinder/: BlurredCluster_module.cc  BlurredClustering_module.cc  CMakeLists.txt  ClusteringValidation_module.cc  TrajCluster_module.cc  clustermodules.fcl
larreco/Deprecated/: CMakeLists.txt
larreco/DirOfGamma/: CMakeLists.txt  DirOfGamma.cxx  DirOfGamma.h  EMShower3D_module.cc  MergeEMShower3D_module.cc  MultiEMShowers_module.cc
larreco/EventFinder/: CMakeLists.txt
larreco/Genfit/: CMakeLists.txt
larreco/HitFinder/: CMakeLists.txt  CompressedHitFinder.fcl  CompressedHitFinder_module.cc  GausHitFinderAlg.cxx  GausHitFinderAlg.h  GausHitFinderAna_module.cc  GausHitFinderOrganized_module.cc  GausHitFinder_module.cc  HitAnaFOM_module.cc  HitPlotter.fcl  HitPlotter_module.cc  RFFHitFinderAlg.cxx  RFFHitFinderAlg.h  RFFHitFitter.cxx  RFFHitFitter.h  compressedhitfinderjob.fcl  hitfindermodules.fcl  hitfindermodules_microboone.fcl  hitplotterjob.fcl  plot_hitplots.py
larreco/MCComp/: CMakeLists.txt
larreco/QuadVtx/: CMakeLists.txt
larreco/RecoAlg/: #showeralgorithms.fcl#  BlurredClusterAlg.cxx  BlurredClusterAlg.h  CMakeLists.txt  EMShowerAlg.cxx  EMShowerAlg.h  Geometric3DVertexFitter.cxx  Geometric3DVertexFitter.h  PMAlgCosmicTagger.cxx  PMAlgDetermineT0.cxx  PMAlgDetermineT0.h  PMAlgTracking.cxx  PMAlgTracking.h  PMAlgVertexing.cxx  PMAlgVertexing.h  ProjectionMatchingAlg.cxx  ProjectionMatchingAlg.h  SBNShowerAlg.cxx  SBNShowerAlg.h  SBNShowerCheatingAlg.cxx  SBNShowerCheatingAlg.h  ShowerEnergyAlg.cxx  ShowerEnergyAlg.h  StitchAlg.cxx  TCShowerAlg.cxx  TRACSAlg.cxx  TRACSAlg.h  TrackCreationBookKeeper.h  TrackKalmanFitter.cxx  TrackKalmanFitter.h  TrackShowerSepAlg.cxx  TrackShowerSepAlg.h  TrajClusterAlg.cxx  TrajClusterAlg.h  TrajectoryMCSFitter.cxx  TrajectoryMCSFitter.h  clusteralgorithms.fcl  pmadeterminet0alg.fcl  showeralgorithms.fcl
larreco/RecoAlg/CMTool/CMTAlgMatch/: CMakeLists.txt
larreco/RecoAlg/CMTool/CMTAlgMerge/: CMakeLists.txt
larreco/RecoAlg/CMTool/CMToolApp/: CMakeLists.txt
larreco/RecoAlg/CMTool/CMToolBase/: CMakeLists.txt
larreco/RecoAlg/Cluster3DAlgs/: CMakeLists.txt
larreco/RecoAlg/Cluster3DAlgs/ConvexHull/: CMakeLists.txt
larreco/RecoAlg/Cluster3DAlgs/PathFinding/: CMakeLists.txt
larreco/RecoAlg/Cluster3DAlgs/Voronoi/: CMakeLists.txt
larreco/RecoAlg/ClusterRecoUtil/: CMakeLists.txt
larreco/RecoAlg/ImagePatternAlgs/: CMakeLists.txt  PointIdTrainingNuevent_module.cc  ShowerVertexFinder_module.cc  imagepatternalgs.fcl
larreco/RecoAlg/ImagePatternAlgs/DataProvider/: CMakeLists.txt  DataProviderAlg.cxx  DataProviderAlg.h
larreco/RecoAlg/ImagePatternAlgs/Keras/: CMakeLists.txt  keras_model.h
larreco/RecoAlg/ImagePatternAlgs/PointIdAlg/: CMakeLists.txt
larreco/RecoAlg/ImagePatternAlgs/ShowerVertex/: CMakeLists.txt  HitCNNOutput.cxx  HitCNNOutput.h  VertexCandidate.cxx  VertexCandidate.h
larreco/RecoAlg/ImagePatternAlgs/Tensorflow/: CMakeLists.txt
larreco/RecoAlg/ImagePatternAlgs/Tensorflow/Modules/: CMakeLists.txt  PointIdEffTest_module.cc
larreco/RecoAlg/ImagePatternAlgs/Tensorflow/PointIdAlg/: CMakeLists.txt  PointIdAlg.cxx  PointIdAlg.h
larreco/RecoAlg/ImagePatternAlgs/Tensorflow/TF/: CMakeLists.txt
larreco/RecoAlg/ImagePatternAlgs/job/: CMakeLists.txt
larreco/RecoAlg/MCRecoUtils/: CMakeLists.txt  RecoUtils.cc  RecoUtils.h  ShowerUtils.cc  ShowerUtils.h
larreco/RecoAlg/PMAlg/: CMakeLists.txt  GeomDefs.h  LegacyGeomDefs.h  PmaElement3D.cxx  PmaElement3D.h  PmaHit3D.cxx  PmaHit3D.h  PmaNode3D.cxx  PmaNode3D.h  PmaSegment3D.cxx  PmaSegment3D.h  PmaTrack3D.cxx  PmaTrack3D.h  PmaTrkCandidate.cxx  PmaTrkCandidate.h  PmaVtxCandidate.cxx  PmaVtxCandidate.h  SortedObjects.cxx  SortedObjects.h  Utilities.cxx  Utilities.h
larreco/RecoAlg/TCAlg/: CMakeLists.txt  DataStructs.h  TCShTree.cxx  TCShower.cxx  TCShower.h  Utils.cxx
larreco/RecoAlg/TCAlg/TCDebugTools/: tc_sh_debugger
larreco/RecoAna/: CMakeLists.txt  MCParticleToPFParticle.cxx  MCParticleToPFParticle.h  TrackRecoAna_module.cc
larreco/ShowerFinder/: CMakeLists.txt  EMShower_module.cc  NeutrinoShowerEff_argoneut.fcl  NeutrinoShowerEff_module.cc  SBNShower_module.cc  ShowerElementHolder.hh  ShowerProduedPtrsHolder.hh  ShowerPropertyHolder.h  ShowerPropertyHolder.hh  ShowerRecombination.fcl  ShowerRecombination_module.cc  ShowerValidation_module.cc  TCShowerTemplateMaker_module.cc  (+2 more)
test/: CMakeLists.txt  altCMakeLists.cmake
ups/: product_deps
(+198 files in other folders)
